--- a/view/frontend/layout/banner_index_index.xml
+++ b/view/frontend/layout/banner_index_index.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<page layout="1column"
+<page layout=""
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
@@ -9,7 +9,10 @@
     </head>
     <body>
         <referenceContainer name="content">
-                <block name="banner.demo" class="Dungbv\Banner\Block\Demo" template="Dungbv_Banner::demo.phtml" />
-            </referenceContainer>
+                <block name="banner.demo"
+                       class="Dungbv\Banner\Block\Demo"
+                       template="Dungbv_Banner::demo.phtml"
+                />
+        </referenceContainer>
      </body>
 </page>
